Workedround the sitemesh / jetty / 404 problem